fixed start marker position